# CyberSide

./: .breakpoints  main.py  pyproject.toml
CyberSide/: __init__.py  cyberside.db  models.py  routes.py  socketz.py
CyberSide/static/css/: background.css
CyberSide/static/js/: index-sockets.js  playaudio.js
CyberSide/templates/: base.html  home.html
